--- a/01-color-flipper/setup/index.html
+++ b/01-color-flipper/setup/index.html
@@ -16,7 +16,7 @@
       <h4>color-flipper</h4>
       <ul class="nav-links">
         <li><a href="index.html">Simple</a></li>
-        <li><a href="hex.html">hex</a></li>        
+        <li(#a5...8)><a href="hex.html">hex</a></li>        
       </ul>
     </div>
     <!-- FIN NAV CENTER -->
