--- a/02-counter/index.html
+++ b/02-counter/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>your code goes here</h1>
+    <main>
+      <div class="container">
+        <h1>Counter</h1>
+        <span id="value">5</span><br>
+        <button class="btn increase">increase</button>
+        <button class="btn reset">reset</button>
+        <button class="btn decrease">decrease</button>
+      </div>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
