reviews.js terminé

--- a/03-reviews/setup/index.html
+++ b/03-reviews/setup/index.html
@@ -28,7 +28,7 @@
           <div class="image-container">
             <img src="./person-1.jpeg" alt="photo" id="person-img">
           </div>
-          <h4 id="">sara jones</h4>
+          <h4 id="author">sara jones</h4>
           <p id="job">ux designer</p>
           <p id="info">Lorem ipsum, dolor sit amet consectetur 
           adipisicing elit. Optio, quaerat ab. Totam quaerat animi
@@ -48,9 +48,7 @@
 
         <!-- FIN REVIEW -->
       </section>
-    </main>
-   
-    
+    </main>    
   </body>
 </html>
  
