--- a/06-modal/setup/index.html
+++ b/06-modal/setup/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Modal</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <!-- javascript -->
+    <script defer src="app.js"></script>
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -31,7 +34,6 @@
         </button>
       </div>
      </div>
-    <!-- javascript -->
-    <script src="app.js"></script>
+    
   </body>
 </html>
