--- a/08-menu/index.html
+++ b/08-menu/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- javascript -->
+    <script defer src="app.js"></script>
     <title>Starter</title>
     <!-- font-awesome -->
     <link
@@ -13,8 +15,30 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
-    <!-- javascript -->
-    <script src="app.js"></script>
+    <section class="menu">
+      <!-- title -->
+      <div class="title">
+        <h2 class="title">our menu</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- filter buttons -->
+      <!-- menu items -->
+      <div class="section-center"> 
+        <!-- single item 1 -->
+        <article class="menu-item">
+          <img src="./menu-item.jpeg" alt="photo" class="photo">
+          <div class="item-info">
+            <header>
+              <h4>butter milk pancakes</h4>
+              <h4 class="price">$15</h4>
+            </header>
+            <p class="item-text" >Lorem ipsum dolor sit amet consectetur adipisicing
+               elit. Consequuntur voluptates quae velit? Ea atque 
+               maxime soluta. Tempore maxime provident dolorem.</p>
+          </div>
+        </article>
+        <!-- end single item 1 -->
+      </div>
+    </section>
   </body>
 </html>
