--- a/09-video/index.html
+++ b/09-video/index.html
@@ -3,14 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- javascript -->
+    <script defer src="app.js"></script>
     <title>Video</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
+  <header>
+    <video class="video-container" muted autoplay loop>
+      <source src="./video.mp4" type="video/mp4">
+    </video>
+  </header>
   <body>
     <h1>video project</h1>
-    <!-- javascript -->
-    <script src="app.js"></script>
+    <!-- video switch -->
+     <button class="switch-btn">
+      <span>play</span>
+      <span>pause</span>
+      <span class="switch"></span>
+     </button>
   </body>
 </html>
