--- a/09-video/index.html
+++ b/09-video/index.html
@@ -16,6 +16,10 @@
     </video>
   </header>
   <body>
+    <!-- preloader -->
+     <div class="preloader">
+      <img src="./preloader.gif" alt="preloader">
+     </div>
     <h1>video project</h1>
     <!-- video switch -->
      <button class="switch-btn">
