--- a/11-tabs/index.html
+++ b/11-tabs/index.html
@@ -1,34 +1,4 @@
-<!-- goals -->
-<p>
-  Chambray authentic truffaut, kickstarter brunch taxidermy vape heirloom four
-  dollar toast raclette shoreditch church-key. Poutine etsy tote bag, cred
-  fingerstache leggings cornhole everyday carry blog gastropub. Brunch biodiesel
-  sartorial mlkshk swag, mixtape hashtag marfa readymade direct trade man braid
-  cold-pressed roof party. Small batch adaptogen coloring book heirloom.
-  Letterpress food truck hammock literally hell of wolf beard adaptogen everyday
-  carry. Dreamcatcher pitchfork yuccie, banh mi salvia venmo photo booth quinoa
-  chicharrones.
-</p><!-- goals -->
-<p>
-  Chambray authentic truffaut, kickstarter brunch taxidermy vape heirloom four
-  dollar toast raclette shoreditch church-key. Poutine etsy tote bag, cred
-  fingerstache leggings cornhole everyday carry blog gastropub. Brunch biodiesel
-  sartorial mlkshk swag, mixtape hashtag marfa readymade direct trade man braid
-  cold-pressed roof party. Small batch adaptogen coloring book heirloom.
-  Letterpress food truck hammock literally hell of wolf beard adaptogen everyday
-  carry. Dreamcatcher pitchfork yuccie, banh mi salvia venmo photo booth quinoa
-  chicharrones.
-</p><!-- goals -->
-<p>
-  Chambray authentic truffaut, kickstarter brunch taxidermy vape heirloom four
-  dollar toast raclette shoreditch church-key. Poutine etsy tote bag, cred
-  fingerstache leggings cornhole everyday carry blog gastropub. Brunch biodiesel
-  sartorial mlkshk swag, mixtape hashtag marfa readymade direct trade man braid
-  cold-pressed roof party. Small batch adaptogen coloring book heirloom.
-  Letterpress food truck hammock literally hell of wolf beard adaptogen everyday
-  carry. Dreamcatcher pitchfork yuccie, banh mi salvia venmo photo booth quinoa
-  chicharrones.
-</p><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -76,7 +46,7 @@
            </div>
           <!-- end single item 1 -->
           <!-- single item 2 -->
-           <div class="content active" id="vision">
+           <div class="content" id="vision">
             <h4>vision</h4>
             <!-- vision -->
 <p>
@@ -96,7 +66,7 @@
            </div>
           <!-- end single item 2 -->
           <!-- single item 3 -->
-           <div class="content active" id="goals">
+           <div class="content" id="goals">
             <h4>goals</h4>
               <!-- goals -->
 <p>
