--- a/13-lorem ipsum/index.html
+++ b/13-lorem ipsum/index.html
@@ -3,14 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <!-- javascript -->
+    <script defer src="app.js"></script>
     <title>Lorem Ipsum</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>lorem ipsum project</h1>
-    <!-- javascript -->
-    <script src="app.js"></script>
+    <section class="section-center">
+      <h3>tired of boring lorem ipsum ?</h3>
+      <form class="lorem-form">
+        <label for="amount">paragraphs: </label>
+        <input type="text" id="amount" name="amount"
+        placeholder="5"/>
+        <button class="btn" type="submit">generate</button>
+      </form>
+      <article class="lorem-text"></article>
+    </section>
+   
   </body>
 </html>
